# forcelog-adc

./: .gitignore  README.md  bom.ods  commands.ods
cad/: 1550Z113 Assembly.stp  1550z113_box_v1.prt.1  1550z113_box_v1.prt.10  1550z113_box_v1.prt.11  1550z113_box_v1.prt.12  1550z113_box_v1.prt.13  1550z113_box_v1.prt.14  1550z113_box_v1.prt.15  1550z113_box_v1.prt.16  1550z113_box_v1.prt.17  1550z113_box_v1.prt.18  1550z113_box_v1.prt.19  1550z113_box_v1.prt.2  1550z113_box_v1.prt.3  1550z113_box_v1.prt.4  1550z113_box_v1.prt.5  1550z113_box_v1.prt.6  1550z113_box_v1.prt.7  1550z113_box_v1.prt.8  1550z113_box_v1.prt.9  1550z113_lid_v1.prt.1  1550z113_lid_v1_sw0001.prt.1  18650_battery_holder.prt.1  18650_battery_holder.prt.2  18650_battery_holder.prt.3  2040343-2.prt.1  4250012.igs  425004.igs  HG2400RDR-RSP.step  MMCX male to SMA female.step  RND 455-00370_3D.STEP  adc_module.asm.1  adc_module.asm.10  (+129 more)
firmware_forcelogADC/main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h  adc_task.c  adc_task.h  aux.c  aux.h  batmon.c  batmon.h  blink.c  blink.h  com_serial.c  com_serial.h  com_tcp.c  com_tcp.h  config.c  config.h  defines.h  globals.h  local_storage.c  local_storage.h  main.c  main.h  status_led.c  status_led.h  storage.c  storage.h  temp_int.c  temp_int.h  trigger.c  trigger.h  wifi.c  wifi.h
firmware_forcelogADC/main/adc_modules/: hx711_01.c  hx711_01.h
firmware_forcelogADC/main/adc_modules/hx711-a/: adc_defines.h  adc_routines.c  adc_routines.h
firmware_forcelogADC/main/adc_modules/simulation/: adc_defines.h  adc_globals.h  adc_routines.c  adc_routines.h
(+334 files in other folders)
